[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/tools/planet creation/ThreeStepsPlanetCreator.gd" type="Script" id=1]
[ext_resource path="res://objects/EditableHandle.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/CenterHandle.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="ThreeStepsPlanetCreatorTool" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="VelocityHandle" parent="." instance=ExtResource( 2 )]
tip = Vector2( 20, 0 )
color = Color( 0, 255, 249.023, 1 )

[node name="RadiusHandle" parent="." instance=ExtResource( 2 )]
tip = Vector2( 0, 20 )
color = Color( 1, 1, 1, 1 )

[node name="CenterHandle" type="Position2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="CenterHandle"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterHandle/Area2D"]
shape = SubResource( 1 )
[connection signal="input_event" from="CenterHandle/Area2D" to="." method="_on_Area2D_input_event"]
